# remote-settings-fxrelay-allowlist-updater

./: Dockerfile  Makefile  README.md  pyproject.toml  script.py  test.py
.github/workflows/: cd.yaml  ci.yaml  publish.yaml
