[tool.poetry]
name = "fxrelay-allowlist-updater"
version = "0.1.0"
description = "Remote Settings cronjob script to update fxrelay-allowlist"
authors = ["Luke Crouch <lcrouch@mozilla.com>"]
license = "MPLv2"

[tool.poetry.dependencies]
python = "^3.12"
kinto-http = "^11.8.0"
requests = "2.32.3"
sentry-sdk = "^2.29.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.11"
types-requests = "2.32.0.20250602"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 99
extend-exclude = [
    "__pycache__",
    ".venv/",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E", "W",
    # flake8
    "F",
    # isort
    "I",
]
ignore = [
    # `format` will wrap lines.
    "E501",
]

[tool.ruff.lint.isort]
lines-after-imports = 2
